--- a/equipment.html
+++ b/equipment.html
@@ -34,9 +34,9 @@
                 <li class="menu-item"><a href="./index.html">Home</a></li>
                 <li class="menu-item"><a href="./athletes.html">Athletes</a></li>
                 <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
-                <li class="menu-item"><a href="#">Courses</a></li>
-                <li class="menu-item"><a href="#">Boat Trips</a></li>
-                <li class="menu-item"><a href="#">Location</a></li>
+                <li class="menu-item"><a href="./courses.html">Courses</a></li>
+                <li class="menu-item"><a href="./boat-trips.html">Boat Trips</a></li>
+                <li class="menu-item"><a href="./location.html">Location</a></li>
             </ul>
         </div>
         <div class="row-listed-navigation">
@@ -45,9 +45,9 @@
                 <li class=""><a href="./index.html">Home</a></li>
                 <li class=""><a href="./athletes.html">Athletes</a></li>
                 <li class=""><a href="./equipment.html">Equipment</a></li>
-                <li class=""><a href="#">Courses</a></li>
-                <li class=""><a href="#">Boat Trips</a></li>
-                <li class=""><a href="#">Location</a></li>
+                <li class=""><a href="./courses.html">Courses</a></li>
+                <li class=""><a href="./boat-trips.html">Boat Trips</a></li>
+                <li class=""><a href="./location.html">Location</a></li>
             </ul>
         </div>
     </header>
@@ -321,15 +321,16 @@
         </section>
     </main>
     <footer>
-        <!-- Icon and social media links -->
         <article class="flex">
-            <div class="social">
-                <img src="./images/logo/logo-extended.svg" alt="logo" class="logo">
-                <icons class="flex">
-                    <a href=""><img src="./images/icons/snapchat.svg"></a>
-                    <a href=""><img src="./images/icons/instagram.svg"></a>
-                    <a href=""><img src="./images/icons/twitter.svg"></a>
-                </icons>
+            <div class="navigation">
+                <h2>Find us:</h2>
+                <nav class="flex">
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Snapchat</a></li>
+                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#">Facebook</a></li>
+                </nav>
             </div>
             <!-- Footer navigation -->
             <div class="navigation">
