--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <li class="menu-item"><a href="./index.html">Home</a></li>
                 <li class="menu-item"><a href="./athletes.html">Athletes</a></li>
                 <li class="menu-item"><a href="./equipment.html">Equipment</a></li>
-                <li class="menu-item"><a href="#">Courses</a></li>
-                <li class="menu-item"><a href="#">Boat Trips</a></li>
-                <li class="menu-item"><a href="#">Location</a></li>
+                <li class="menu-item"><a href="./courses.html">Courses</a></li>
+                <li class="menu-item"><a href="./boat-trips.html">Boat Trips</a></li>
+                <li class="menu-item"><a href="./location.html">Location</a></li>
             </ul>
         </div>
         <div class="row-listed-navigation">
@@ -45,9 +45,9 @@
                 <li class=""><a href="./index.html">Home</a></li>
                 <li class=""><a href="./athletes.html">Athletes</a></li>
                 <li class=""><a href="./equipment.html">Equipment</a></li>
-                <li class=""><a href="#">Courses</a></li>
-                <li class=""><a href="#">Boat Trips</a></li>
-                <li class=""><a href="#">Location</a></li>
+                <li class=""><a href="./courses.html">Courses</a></li>
+                <li class=""><a href="./boat-trips.html">Boat Trips</a></li>
+                <li class=""><a href="./location.html">Location</a></li>
             </ul>
         </div>
     </header>
@@ -65,7 +65,6 @@
                 </div>
             </article>
         </section>
-        <!-- About athletes -->
         <article class="main hidden">
             <div class="icon">
                 <img src="./images/icons/athletes.png" alt="">
@@ -119,7 +118,6 @@
         </article>
     </main>
     <footer>
-        <!-- Icon and social media links -->
         <article class="flex">
             <div class="navigation">
                 <h2>Find us:</h2>
