--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
             style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);">
             <article class="text">
                 <h1>Jeddah Freediving</h1>
+                <h1>(Sample Site)</h1>
                 <span class="text-type" data-wait="1500"
                     data-words='["Quality equipment", "Awesome insructors", "What are you waiting for!"]'></span>
                 <div class="buttons">
-                    <button onclick="location.href='./equipment.html'" type="button"><span>Equiptment</span></button>
-                    <button onclick="location.href='#'" type="button"><span>Classes</span></button>
+                    <button onclick="location.href='./athletes.html'" type="button"><span>Athletes</span></button>
+                    <button onclick="location.href='./courses.html'" type="button"><span>Courses</span></button>
                 </div>
             </article>
         </section>
