article-style-edit

--- a/athletes.html
+++ b/athletes.html
@@ -68,7 +68,7 @@
                 <a href="#">
                     <h1>Ishaq</h1>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc.</p>
             </div>
         </article>
         <article class="main inverted hidden">
@@ -79,7 +79,7 @@
                 <a href="#">
                     <h1>Mariam</h1>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc.</p>
             </div>
         </article>
         <article class="main hidden">
@@ -90,7 +90,7 @@
                 <a href="#">
                     <h1>Osama</h1>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc.</p>
             </div>
         </article>
     </main>
