--- a/boat-trips.html
+++ b/boat-trips.html
@@ -64,10 +64,12 @@
                 <img src="./images/icons/boat-trip.jpg" alt="">
             </div>
             <div class="info">
-                <a href="./athletes.html">
+                <a href="#">
                     <h1>August 13th 2020</h1>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc.</p>
+                <br>
+                <a class="blue-link" href="#"><span>Learn more</span>></a>
             </div>
         </article>
         <article class="main inverted hidden">
@@ -75,10 +77,12 @@
                 <img src="./images/icons/boat-trip.jpg" alt="">
             </div>
             <div class="info">
-                <a href="./equipment.html">
+                <a href="#">
                     <h1>August 27th 2020</h1>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc.</p>
+                <br>
+                <a class="blue-link" href="#"><span>Learn more</span>></a>
             </div>
         </article>
         <article class="main hidden">
@@ -86,8 +90,12 @@
                 <img src="./images/icons/boat-trip.jpg" alt="">
             </div>
             <div class="info">
-                <h1>September 15th 2020</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
+                <a href="#">
+                    <h1>September 16th 2020</h1>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc.</p>
+                <br>
+                <a class="blue-link" href="#"><span>Learn more</span>></a>
             </div>
         </article>
     </main>
