--- a/stumble.html
+++ b/stumble.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Stumble</title>
     <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg" />
     <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -57,99 +57,51 @@
     </header>
     <main>
         <!-- Banner -->
-        <section class="banner">
-            <article class="text">
-                <h1>Abdulrahman Jouhari</h1>
-                <span class="text-type" data-wait="1500"
-                    data-words='["Web developer", "Graphic designer", "Game developer"]'></span>
-                <div class="buttons">
-                    <button onclick="location.href='./algorithms.html'" type="button"><span>Projects</span></button>
-                    <button onclick="location.href='./about.html'" type="button"><span>About</span></button>
-                </div>
+        <section class="banner short">
+            <article class="text short">
+                <h1>Stumble</h1>
             </article>
+            <div class="letters-animation">
+                <ul class="letters">
+                    <li>s</li>
+                    <li>t</li>
+                    <li>u</li>
+                    <li>m</li>
+                    <li>b</li>
+                    <li>l</li>
+                    <li>e</li>
+                </ul>
+            </div>
         </section>
-        <!-- About article -->
-        <article class="main hidden">
-            <div class="icon">
-                <img src="./images/icons/gears-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <a href="">
-                    <h1>About</h1>
-                </a>
-                <p>I'm Abdulrahman Jouhari, currently a high school student, and I'm very keen in computer science. I
-                    truly believe in free and open-source software, that said, I keep my all projects available to view
-                    and critique (open-source) under a MIT licence.
-                    <br><br>
-                    I hope you find my code to be of some interest, and if you have any inquires or recommendations,
-                    feel free to contact me through my email listed in the footer below.
-                </p>
-                <br>
-                <a class="blue-link" href="./about.html"><span>Learn more</span>></a>
-            </div>
+        <!-- Game and title -->
+        <article class="game">
+            <h1 class="error">Unfortunately, stumble is not yet supported in mobile and tablet :/</h1>
+            <h1 class="title">Stumble (In Production)</h1>
+            <iframe src="https://itch.io/embed-upload/2233743?color=1f1f1f" allowfullscreen="" width="950" height="620"
+                frameborder="0"><a href="https://ajouhari.itch.io/stumble">Play Stumble on itch.io</a></iframe>
         </article>
-        <!-- Algorithms article -->
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
+        <!-- Credits and description -->
+        <article class="game-description hidden">
+            <div class="credits">
+                <h2>Credits</h2>
+                <p>By Abdulrahman Jouhari<br>
+                    Framework: Unity<br>
+                    Assets used: Bolt, Sunnyland<br></p>
+                <a class="blue-link" href="https://ajouhari.itch.io/stumble"><span>Alternate Link</span>></a>
             </div>
             <div class="info">
-                <a href="">
-                    <h1>Algorithms</h1>
-                </a>
-                <p>Algorithms are much like the gears that keep a machine running. They are critical to many operations,
-                    and how they’re coded may save time when you can least afford it.
-                    <br><br>
-                    Many of our everyday tasks are rather menial, and can easily be automated or assisted by computer
-                    algorithms. Available is a list of algorithms that serve many different purposes. Each are labelled
-                    by their complexity, instructions, and the date at which they were created.</p>
-                <br>
-                <a class="blue-link" href="./algorithms.html"><span>Learn more</span>></a>
-            </div>
-        </article>
-        <!-- Web design article -->
-        <article class="main hidden">
-            <div class="icon">
-                <img src="./images/icons/web-design-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <a href="">
-                    <h1>Web design</h1>
-                </a>
-                <p>Sometimes I feel like cleaning my eyes out with soap after seeing the monstrosity that is a poorly
-                    designed, buggy website. But fear no more! Here I will show you what to do (and what not to do) when
-                    building a website.
-                    <br><br>
-                    Even though I like to bash some websites for being buggy and having a bad design, a journey of a
-                    thousand miles starts with one step, and it never hurts to try. Hopefully my repositories can be of
-                    some use. Here I showcase my web design progress, the good, the bad, and the ugly.</p>
-                <br>
-                <a class="blue-link" href="./web-design.html"><span>Learn more</span>></a>
-            </div>
-        </article>
-        <!-- Game development article -->
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/game-controller-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <h1>Game development</h1>
-                <p>There’s is no better feeling than that of a breezy summer night as a kid, staying indoors and playing
-                    your favorite game. Games are a great way to relax and enjoy the moment, and that’s what I aim for
-                    when creating my video games.</p>
-                <h3>- Stumble</h3>
-                <p>Stumble is my first game development project, making this game took a great deal of trial and error.
-                    But eventually, I got a working model as a foundation to what will later become a fully fledged,
-                    multi-level game. This was produced using the Unity framework, and the Bolt and Sunnyland assets.
-                    The game is currently not supported on mobile and tablets.</p>
-                <br>
-                <a class="blue-link" href="./stumble.html"><span>Play Stumble</span>></a>
+                <h2>Description:</h2>
+                <p>In an unpleasant surprise, Fabio the fox finds out that his brother Felix was taken hostage! To
+                    rescue his brother,
+                    Fabio sets out in a mission to cross the dangerous lands of Venaire, where the paths are winding and
+                    the people are
+                    not to be trusted! Can you help save him save Felix?</p>
             </div>
         </article>
     </main>
     <footer>
+        <!-- Footer navigation -->
         <article class="flex">
-            <!-- Footer navigation -->
             <div class="navigation">
                 <h2>Find us:</h2>
                 <nav class="flex">
@@ -191,7 +143,6 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/typewriter.js"></script>
 </body>
 
 </html>
