--- a/web-design.html
+++ b/web-design.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Web Design</title>
     <link rel="icon" type="image/x-icon" href="./images/logo/logo-main.svg" />
     <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -57,99 +57,90 @@
     </header>
     <main>
         <!-- Banner -->
-        <section class="banner">
-            <article class="text">
-                <h1>Abdulrahman Jouhari</h1>
-                <span class="text-type" data-wait="1500"
-                    data-words='["Web developer", "Graphic designer", "Game developer"]'></span>
-                <div class="buttons">
-                    <button onclick="location.href='./algorithms.html'" type="button"><span>Projects</span></button>
-                    <button onclick="location.href='./about.html'" type="button"><span>About</span></button>
-                </div>
+        <section class="banner short">
+            <article class="text short">
+                <h1>Web Design</h1>
             </article>
+            <div class="letters-animation">
+                <ul class="letters">
+                    <li>d</li>
+                    <li>e</li>
+                    <li>s</li>
+                    <li>i</li>
+                    <li>g</li>
+                    <li>n</li>
+                </ul>
+            </div>
         </section>
-        <!-- About article -->
+        <!-- The good -->
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/gears-icon.svg" alt="">
+                <img class="web-page" src="./images/icons/the-good.png" alt="">
             </div>
             <div class="info">
                 <a href="">
-                    <h1>About</h1>
+                    <h1>The good</h1>
                 </a>
-                <p>I'm Abdulrahman Jouhari, currently a high school student, and I'm very keen in computer science. I
-                    truly believe in free and open-source software, that said, I keep my all projects available to view
-                    and critique (open-source) under a MIT licence.
+                <p>Making this finished product - the one you're viewing now - took much time and effort, and has been
+                    through multiple redesigns in order to become what it is now. It may still not be perfect, but it is
+                    much improved from what it was earlier.
                     <br><br>
-                    I hope you find my code to be of some interest, and if you have any inquires or recommendations,
-                    feel free to contact me through my email listed in the footer below.
-                </p>
+                    What makes this site good is it's simple and sleek look. This site also has more javascript than the
+                    others, enabling me to make eye-catching functions like the type writer animation. Speaking of
+                    which, the animations, such as the dropdown animation, is much smoother and appealing, adding to the
+                    modern, sleek design.</p>
                 <br>
-                <a class="blue-link" href="./about.html"><span>Learn more</span>></a>
+                <a class="blue-link"
+                    href="https://github.com/ajouhari/web-development/tree/master/002-pink-flamingo"><span>View code in
+                        GitHub</span>></a>
             </div>
         </article>
-        <!-- Algorithms article -->
+        <!-- The bad -->
         <article class="main inverted hidden">
             <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
+                <img class="web-page" src="./images/icons/the-bad.png" alt="">
             </div>
             <div class="info">
                 <a href="">
-                    <h1>Algorithms</h1>
+                    <h1>The bad</h1>
                 </a>
-                <p>Algorithms are much like the gears that keep a machine running. They are critical to many operations,
-                    and how they’re coded may save time when you can least afford it.
+                <p>The common saying that you learn from from your mistakes is very true in this regard. I started the
+                    site with the intention of making it in
+                    dark mode; however, upon making it so, I realized how poorly the colour clash with each other. I'd
+                    recommend picking your primary colors out before you start with the design.
                     <br><br>
-                    Many of our everyday tasks are rather menial, and can easily be automated or assisted by computer
-                    algorithms. Available is a list of algorithms that serve many different purposes. Each are labelled
-                    by their complexity, instructions, and the date at which they were created.</p>
+                    Another shortcoming of the site is its badly sized elements. I realized the end-users don't need
+                    the navigation and buttons to be so large. Toning down the size of some elements in future projects
+                    made the site much less clunky and having better usability. Upon loading the site would also
+                    display in chunks, which looked unprofessional and outdated.</p>
                 <br>
-                <a class="blue-link" href="./algorithms.html"><span>Learn more</span>></a>
+                <a class="blue-link"
+                    href="https://github.com/ajouhari/web-development/tree/master/001-colorful-night"><span>View code in
+                        GitHub</span>></a>
             </div>
         </article>
-        <!-- Web design article -->
+        <!-- The ugly -->
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/web-design-icon.svg" alt="">
+                <img class="web-page" src="./images/icons/the-ugly.png" alt="">
             </div>
             <div class="info">
-                <a href="">
-                    <h1>Web design</h1>
-                </a>
-                <p>Sometimes I feel like cleaning my eyes out with soap after seeing the monstrosity that is a poorly
-                    designed, buggy website. But fear no more! Here I will show you what to do (and what not to do) when
-                    building a website.
+                <h1>The ugly</h1>
+                <p>What could make of break a design is the colors you choose. A good rule of thumb is to limit the
+                    amount of colors you use to just a few, and avoid using bright, tacky colors; instead, opt for
+                    smoother, more vibrant color combinations, like blue and white. That said, I would recommend
+                    sticking with only greyscale shades for the text and the page background.
                     <br><br>
-                    Even though I like to bash some websites for being buggy and having a bad design, a journey of a
-                    thousand miles starts with one step, and it never hurts to try. Hopefully my repositories can be of
-                    some use. Here I showcase my web design progress, the good, the bad, and the ugly.</p>
-                <br>
-                <a class="blue-link" href="./web-design.html"><span>Learn more</span>></a>
-            </div>
-        </article>
-        <!-- Game development article -->
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/game-controller-icon.svg" alt="">
-            </div>
-            <div class="info">
-                <h1>Game development</h1>
-                <p>There’s is no better feeling than that of a breezy summer night as a kid, staying indoors and playing
-                    your favorite game. Games are a great way to relax and enjoy the moment, and that’s what I aim for
-                    when creating my video games.</p>
-                <h3>- Stumble</h3>
-                <p>Stumble is my first game development project, making this game took a great deal of trial and error.
-                    But eventually, I got a working model as a foundation to what will later become a fully fledged,
-                    multi-level game. This was produced using the Unity framework, and the Bolt and Sunnyland assets.
-                    The game is currently not supported on mobile and tablets.</p>
-                <br>
-                <a class="blue-link" href="./stumble.html"><span>Play Stumble</span>></a>
+                    Another aspect that should be noted is the proportion of elements compared to each other. A clear
+                    example here is the proportion of the banner compared to the articles in the page. Also take note of
+                    the images used, for they could easily take up space and increase loading times, so it best to
+                    compress it or use a better file format.</p>
             </div>
         </article>
     </main>
     <footer>
+        <!-- Footer navigation -->
         <article class="flex">
-            <!-- Footer navigation -->
             <div class="navigation">
                 <h2>Find us:</h2>
                 <nav class="flex">
@@ -191,7 +182,6 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/typewriter.js"></script>
 </body>
 
 </html>
