removed-page-loader

--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
                 <a href="">
                     <h1>Send a message:</h1>
                 </a>
-                <form class="contact-form" name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
-                    <p><input type="text" name="name" placeholder="Name" required/></p>
+                <form class="contact-form" name="contact" method="POST" data-netlify-recaptcha="true"
+                    data-netlify="true">
+                    <p><input type="text" name="name" placeholder="Name" required /></p>
                     <p><input type="text" name="email" placeholder="Email" required></textarea></p>
                     <p><textarea name="message" placeholder="Message" required></textarea></p>
                     <div class="recaptcha" data-netlify-recaptcha="true"></div>
@@ -211,4 +212,3 @@
 </body>
 
 </html>
-  
