--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
               ><img
                 class="help__picture-image to-image"
                 src="./Resources/portrait.PNG"
-                alt="help" /></picture
-            ><span class="help__bubble g-bubble to-right"
-              >There's also human help 👋</span
-            >
+                alt="help"
+            /></picture>
           </div>
         </div>
       </section>
