--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header__container">
         <div class="header__left">
           <a class="header__logo" href="#"
-            ><img class="header__icon" src="./Resources/logo1.svg" alt="logo"
+            ><img class="header__icon" src="./Resources/logo.PNG" alt="logo"
           /></a>
           <nav class="main-menu" id="main-menu">
             <ul class="main-menu__list">
@@ -155,12 +155,6 @@
       </section>
       <section class="started">
         <div class="started__container g-container">
-          <picture class="started__picture-left"
-            ><img
-              class="started__picture-image"
-              src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/started-man.png"
-              alt="man"
-          /></picture>
           <div class="started__info to-top">
             <h2 class="started__title">Help create a better future</h2>
             <p class="started__description">
@@ -184,12 +178,6 @@
               </svg>
             </button>
           </div>
-          <picture class="started__picture-right to-left"
-            ><img
-              class="started__picture-image"
-              src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/started-boy.png"
-              alt="boy"
-          /></picture>
         </div>
       </section>
       <footer class="footer">
